--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,12 @@
     "components"
   ],
   "dependencies": {
-    "CustomElements": "Polymer/CustomElements#^0.4.0",
-    "HTMLImports": "Polymer/HTMLImports#^0.4.0",
-    "ShadowDOM": "Polymer/ShadowDOM#^0.4.0",
-    "TemplateBinding": "Polymer/TemplateBinding#^0.4.0",
-    "tools": "Polymer/tools#^0.4.0",
-    "URL": "Polymer/URL#^0.4.0"
+    "CustomElements": "Polymer/CustomElements#0.4.1",
+    "HTMLImports": "KrashStudio/HTMLImports#0.4.1",
+    "ShadowDOM": "Polymer/ShadowDOM#0.4.1",
+    "TemplateBinding": "Polymer/TemplateBinding#0.4.1",
+    "tools": "Polymer/tools#0.4.1",
+    "URL": "Polymer/URL#0.4.1"
   },
   "license": "BSD",
   "private": true,
